--- a/configserver/src/main/resources/application.yaml
+++ b/configserver/src/main/resources/application.yaml
@@ -6,10 +6,17 @@ spring:
     name: configserver
 
   profiles:
-    active: native
+    #active: native
+    active: git
 
   cloud:
     config:
       server:
-        native:
-          search-locations: "classpath:/config"
+        #native:
+          #search-locations: "classpath:/config" or we can use any file path i.e, file system
+        git:
+          uri: "https://github.com/jayadurga-t/avo-config-repo.git"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
