--- a/configserver/src/main/resources/application.yaml
+++ b/configserver/src/main/resources/application.yaml
@@ -21,5 +21,11 @@ spring:
           clone-on-start: true
           force-pull: true
 
+  rabbitmq:
+    localhost: "localhost"
+    port: 5672
+    username: "guest"
+    password: "guest"
+
 encrypt:
   key: "2026Feb14Sat@14:00"
