--- a/configserver/src/main/resources/application.yaml
+++ b/configserver/src/main/resources/application.yaml
@@ -42,7 +42,7 @@ management:
     readiness-state:
       enabled: true
     liveness-state:
-      enebaled: true
+      enabled: true
   endpoint:
     health:
       probes:
